fixes on safari desktop and mobil

--- a/src/components/Navbar/navbar.style.scss
+++ b/src/components/Navbar/navbar.style.scss
@@ -52,8 +52,16 @@
     }
   }
 
-  #demo-menu:focus ~ .demoslist {
-    max-height: 300px;
+  @media only screen and (min-width: 601px) {
+    #demo-menu:hover ~ .demoslist, .demoslist:hover {
+      max-height: 300px;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    #demo-menu:hover ~ .demoslist {
+      max-height: 300px;
+    }
   }
 
   .demoslist {
